[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Puzzles_General/CircleAnswer.gd" type="Script" id=1]
[ext_resource path="res://GFX/dialogue_icon.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 36.71

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 461.25, 279.25 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Pointer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Pointer"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CorrectAnswer" type="Area2D" parent="."]
position = Vector2( 116, 39 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CorrectAnswer"]
shape = SubResource( 1 )

[node name="debug1" type="Sprite" parent="CorrectAnswer"]
position = Vector2( 96, 0 )
scale = Vector2( 0.40625, 0.40625 )
texture = ExtResource( 3 )

[node name="WrongAnswer" type="Area2D" parent="."]
position = Vector2( 212, 39 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WrongAnswer"]
shape = SubResource( 1 )

[node name="debug2" type="Sprite" parent="WrongAnswer"]
position = Vector2( -96, -1 )
scale = Vector2( 0.359375, 0.34375 )
texture = ExtResource( 3 )

[node name="Drawable Area" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drawable Area"]
position = Vector2( 511.75, 287.75 )
shape = SubResource( 2 )

[connection signal="area_entered" from="CorrectAnswer" to="." method="_on_CorrectAnswer_area_entered"]
[connection signal="area_entered" from="WrongAnswer" to="." method="_on_WrongAnswer_area_entered"]
[connection signal="input_event" from="Drawable Area" to="." method="_on_Drawable_Area_input_event"]
